--- a/src/app/preview-display/preview-display.component.html
+++ b/src/app/preview-display/preview-display.component.html
@@ -5,8 +5,8 @@
         <button class="page-navigator-button" (click)="displayNextPage()">></button>
     </div>
     <div>
-        <div class="page" *ngFor="let page of pageLinks; let i = index">
-            <img src="{{page}}" [class]="i + 1 == this.currentPage ? 'page-on-display' : 'page-not-on-display'" alt="resume-place-holder" height="500px"/>
+        <div class="page" *ngFor="let page of pages; let i = index">
+            <img src="{{page}}" [class]="i + 1 == this.currentPage ? 'page-on-display' : 'page-not-on-display'" alt="resume-place-holder" height="400px"/>
         </div>
         
     </div>
