--- a/src/app/progress-bar/progress-bar.component.css
+++ b/src/app/progress-bar/progress-bar.component.css
@@ -12,7 +12,6 @@
 .line{
     margin-top:-1rem;
     border-radius: 1rem;
-    background-color: red;
     height:0.3rem;
-    width: 5%;
+    transition: 1s;
 }
