--- a/src/app/personaldetails/personaldetails.component.css
+++ b/src/app/personaldetails/personaldetails.component.css
@@ -1,4 +1,18 @@
 .unit{
     display: inline-block;
-    
+    animation-name: smooth;
+    animation-duration: 2s;
 }
+
+.personal-extension{
+    transition: 5s;
+}
+  
+  @keyframes smooth {
+    0%   {opacity: 0;}
+    100% {opacity: 1;}
+  }
+  
+
+  
+  
