--- a/src/app/personaldetails/personaldetails.component.html
+++ b/src/app/personaldetails/personaldetails.component.html
@@ -1,4 +1,8 @@
 <div class = 'personal-details-container'>
+    <div class="personal-header">
+        <h4>Personal Detail</h4>
+    </div>
+
     <form>
         <div class = "personal-rowone">
             <div class = "unit">
