--- a/src/app/personaldetails/personaldetails.component.html
+++ b/src/app/personaldetails/personaldetails.component.html
@@ -74,7 +74,7 @@
                  </div>
                  <div class = "unit">
                     <label for="postalcode">Postal Code</label><br>
-                        <input type="text" class="" 
+                        <input type="number" class="" 
                         id="postalcode" ngModel name="postalcode" 
                         #postalcode = "ngModel">
                  </div><br>
@@ -93,7 +93,7 @@
 
                  <div class = "unit">
                     <label for="dob">Data of birth</label><br>
-                        <input type="text" class="" 
+                        <input type="date" class="" 
                         id="dob" ngModel name="dob" 
                         #dob="ngModel">
                  </div>
