--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,15 @@
 <div class="main-container">
-    <div class = "left-segment">
-        <div class = "main-form">
+    <div class="left-segment">
+        <div class="main-form">
             <app-progress-bar></app-progress-bar>
             <app-personaldetails></app-personaldetails>
             <app-personal-summary></app-personal-summary>
+            <app-website-links></app-website-links>
         </div>
-    </div>
 
-    <div class = "right-segment">
-        <div class = "main-preview-window">
-            <app-preview-display></app-preview-display>
+        <div class="right-segment">
+            <div class="main-preview-window">
+                <app-preview-display></app-preview-display>
+            </div>
         </div>
     </div>
-</div>
