--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,7 @@
             <app-personal-summary></app-personal-summary>
             <app-website-links></app-website-links>
         </div>
+    </div>
 
         <div class="right-segment">
             <div class="main-preview-window">
