added preview functionality - created a service that will be injected to bridge the forms and the preview display - added a plain template to demonstrate progress

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,12 +5,14 @@
             <app-personaldetails></app-personaldetails>
             <app-personal-summary></app-personal-summary>
             <app-website-links></app-website-links>
+            <app-references></app-references>
         </div>
     </div>
-
-        <div class="right-segment">
-            <div class="main-preview-window">
-                <app-preview-display></app-preview-display>
+    
+    <div class="right-segment">
+        <div class="main-preview-window">
+                <app-plain-template></app-plain-template>
+                <!-- <app-preview-display></app-preview-display> -->
             </div>
         </div>
     </div>
