--- a/src/app/references/references.component.html
+++ b/src/app/references/references.component.html
@@ -1,20 +1,38 @@
-<div>
+<div class="references-form">
     <form [formGroup]="referencesForm">
-        <div>
-            <label for="refernceName">Referent's Name</label>
-            <input type="text" id="refernceName" placeholder="John Doe" formControlName="name">
-        </div>
-        <div>
-            <label for="refernceCompany">Referent's Company</label>
-            <input type="text" id="refernceCompany" placeholder="ABC Company" formControlName="company">
-        </div>
-        <div>
-            <label for="referncePhone">Referent's Name</label>
-            <input type="number" id="referncePhone" placeholder="+251932323232" formControlName="phone">
-        </div>
-        <div>
-            <label for="refernceEmail">Referent's Name</label>
-            <input type="email" id="refernceEmail" placeholder="johndoe@example.com" formControlName="email">
+        <div formArrayName="references">
+            <div *ngFor="let referenceForm of references.controls; let i= index"
+                formGroupName="referenceForm">
+                <div>
+                    <label for="refernceName">Referent's Name</label>
+                    <input type="text" id="refernceName" placeholder="John Doe"
+                        formControlName="name">
+                </div>
+                <div>
+                    <label for="refernceCompany">Referent's Company</label>
+                    <input type="text" id="refernceCompany" placeholder="ABC
+                        Company"
+                        formControlName="company">
+                </div>
+                <div>
+                    <label for="referncePhone">Referent's Phone</label>
+                    <input type="number" id="referncePhone"
+                        placeholder="+251932323232"
+                        formControlName="phone">
+                </div>
+                <div>
+                    <label for="refernceEmail">Referent's Email</label>
+                    <input type="email" id="refernceEmail"
+                        placeholder="johndoe@example.com"
+                        formControlName="email">
+                </div>
+                <button type="button" (click)="removeReference(i)">Remove This
+                    Reference</button>
+            </div>
         </div>
     </form>
+    <button type="button" (click)="addReference()">Add Reference</button>
+    <button type="button" (click)="resetReferencesForm()">Reset From</button>
 </div>
+<p>Form Control value: {{ referencesForm.value | json }}</p>
+<p>Form Control status: {{ referencesForm.status | json }}</p>
