--- a/src/app/personaldetails/personaldetails.component.html
+++ b/src/app/personaldetails/personaldetails.component.html
@@ -4,7 +4,7 @@
     </div>
 
     <form>
-        <div class = "personal-rowone">
+        <div class = "personal-row">
             <div class = "unit">
                 <label for="jobTitle">Job Title</label><br>
                     <input type="text" class="" 
@@ -20,7 +20,7 @@
         </div>
 
 
-        <div class = "personal-rowtwo">
+        <div class = "personal-row">
             <div class = "unit">
                 <label for="firstname">First Name</label><br>
                     <input type="text" class="" 
@@ -36,7 +36,7 @@
         </div>
 
 
-        <div class = "personal-rowthree">
+        <div class = "personal-row">
             <div class = "unit">
                 <label for="email">Email</label><br>
                     <input type="email" class="" 
@@ -51,7 +51,7 @@
             </div>
         </div>
 
-        <div class = "personal-rowfour">
+        <div class = "personal-row">
             <div class = "unit">
                 <label for="country">Country</label><br>
                     <input type="text" class="" 
