--- a/src/app/personaldetails/personaldetails.component.css
+++ b/src/app/personaldetails/personaldetails.component.css
@@ -4,12 +4,12 @@
 
 .personal-extension{
     animation-name: smooth;
-    animation-duration: 2s;
+    animation-duration: 3s;
 }
   
   @keyframes smooth {
-    0%   {opacity: 0;}
-    100% {opacity: 1;}
+    0% {height: 0rem; ;opacity: 1%;}
+    100% {height:20rem ;opacity: 100%;}
   }
   
 
