--- a/src/app/resume-templates/plain-template/plain-template.component.html
+++ b/src/app/resume-templates/plain-template/plain-template.component.html
@@ -1,9 +1,12 @@
 <div>
     <div class="references-list" *ngIf="references.touched">
-        <h3>References</h3>
+        <h4 *ngIf="references.value.name">References</h4>
         <p *ngIf="references.value.name">Name: {{ references.value.name }}</p>
         <p *ngIf="references.value.company">Company: {{ references.value.company }}</p>
         <p *ngIf="references.value.phone">Phone: {{ references.value.phone }}</p>
         <p *ngIf="references.value.email">Email: {{ references.value.email }}</p>
+        <h4>Ai Summary</h4>
+        <p *ngIf="references.value.aisummary">Aisummary: {{ references.value.aisummary }}</p>
+
     </div>
 </div>
