--- a/src/app/progress-bar/progress-bar.component.html
+++ b/src/app/progress-bar/progress-bar.component.html
@@ -13,6 +13,6 @@
 
     </div>
 
-    <button  (click) = 'changeProgressColor()'>Only for checking</button>
+    <button  class = "btn btn-outline-primary" (click) = 'changeProgressColor()'>Only for checking</button>
 
 
