--- a/src/app/personaldetails/personaldetails.component.css
+++ b/src/app/personaldetails/personaldetails.component.css
@@ -1,16 +1,34 @@
 .unit{
-    display: inline-block;
-}
+  color:rgb(130, 139, 162) ;
 
+
+}  
 .personal-extension{
     animation-name: smooth;
-    animation-duration: 3s;
+    animation-duration: 0.75s;
 }
-  
+.personal-row{
+
+   display: flex;
+   justify-content: flex-start;
+}
+input{
+  background-color: rgb(239, 242, 249);
+}
+
+
   @keyframes smooth {
     0% {height: 0rem; ;opacity: 1%;}
-    100% {height:20rem ;opacity: 100%;}
+    100% {height: 15rem ;opacity: 100%;}
   }
+
+  @media (max-width: 550px) {
+     .personal-row{
+      flex-direction: column;
+    }
+
+  }
+
   
 
   
